# torch_lab

./: .gitignore  setup.py
cxx/: .clang-format  CMakeLists.txt
cxx/cmake/: utils.cmake
cxx/op/attention/: api.cuh  attn_torch.cc  params.cuh
cxx/op/attention/sm80/: attn_infer_v1.cu  attn_infer_v1_config.cuh  attn_utils.cuh
cxx/op/attention/sm8x/: attn_infer_v1.cu  attn_infer_v1_config.cuh  attn_infer_v2.cu  attn_infer_v2_config.cuh  attn_utils.cuh
cxx/utils/: cute_pred_utils.cuh  cute_smem_utils.cuh  cute_utils.cuh  device.cuh  macro.cuh  torch_utils.cuh
tests/: test_utils.py
tests/attn/: attn.py  attn_infer_test.py
